tests/errors/generic_argument_type_mismatch.dang
# Repeated generic arguments must still have a common assignable type.
choose(x: a, y: a): a { x }

pub result = choose(1, "one")
